added my resume

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <h1 class="title">Ahmad Naser</h1>
             <p class="section_text_p2">Computer Science Student</p>
             <div class="btn_container">
-                <button class="btn btn-color-2" onclick="window.open('./assets/resume-example.pdf')">Download CV</button>
+                <button class="btn btn-color-2" onclick="window.open('./assets/AhmadNaserResume.pdf')">Download CV</button>
                 <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact</button>
             </div>
             <div id="social_container">
