--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <p class="section_text_p2">Computer Science Student</p>
             <div class="btn_container">
                 <button class="btn btn-color-2" onclick="window.open('./assets/AhmadNaserResume.pdf')">Download CV</button>
-                <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact</button>
+                <button class="btn btn-color-1" onclick="location.href='./#Contact'">Contact</button>
             </div>
             <div id="social_container">
                 <img src="./assets/linkedin.png" alt="MyLinkedIN profile" class="Icon" onclick="location.href='https://www.linkedin.com/in/ahmad-naser-853560216/'">
