--- a/index.html
+++ b/index.html
@@ -111,15 +111,6 @@
                             </div>
                         </article>
                     </div>
-                    <div class="article-container">
-                        <article>
-                            <img src="./assets/checkmark.png" alt="experience icon" class="Icon">
-                            <div>
-                                <h3>css</h3>
-                                <p>Begginer</p>
-                            </div>
-                        </article>
-                    </div>
                 </div>
                 <div class="details_container">
                     <h2 class="experience-sub-title">Back end development</h2>
@@ -173,17 +164,17 @@
         <div class="experience-details-container">
             <div class="about_container">
             <div class="details_container color-container">
-                <img src="./assets/project-1.png" alt="project-1" class="project-img">
+                <img src="./assets/project-1.jpg" alt="project-1" class="project-img">
                 <h2 class="experience-sub-title project-title">Project One</h2>
                 <div class="btn_container">
-                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/kotkot21/DynamicLIS'">GitHub</button>
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/kotkot21/project2-hotel-management-system'">GitHub</button>
                 </div>
             </div>
             <div class="details_container color-container">
-                <img src="./assets/project-2.png" alt="project-2" class="project-img">
+                <img src="./assets/project-2.jpg" alt="project-2" class="project-img">
                 <h2 class="experience-sub-title project-title">Project Two</h2>
                 <div class="btn_container">
-                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/kotkot21/DijkstraProject'">GitHub</button>
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/kotkot21/inventory-management-system'">GitHub</button>
                 </div>
             </div>
             <div class="details_container color-container">
