--- a/index.html
+++ b/index.html
@@ -65,9 +65,11 @@
                     <div class="details_container">
                         <img src="./assets/experience.png" alt="experience icon" class="Icon">
                         <h3>Experience</h3>
-                        <p>Java: I have experience in Java programming. <br>
-                            HTML/CSS: Proficient in building and styling web pages using HTML and CSS.<br>
-                            PHP: Skilled in server-side scripting with PHP.</p>
+                        <p>JAsal Technologies
+                            Backend Developer
+                            July 2024 - September 2024 (3 months)
+                            Rawabi,PA
+                        </p>
                     </div>
                     <div class="details_container">
                         <img src="./assets/education.png" alt="education icon" class="Icon">
