--- a/index.html
+++ b/index.html
@@ -65,11 +65,12 @@
                     <div class="details_container">
                         <img src="./assets/experience.png" alt="experience icon" class="Icon">
                         <h3>Experience</h3>
-                        <p>JAsal Technologies
-                            Backend Developer
-                            July 2024 - September 2024 (3 months)
-                            Rawabi,PA
-                        </p>
+                        <div style="line-height: 1.8;">
+                            <p><strong>Asal Technologies</strong></p>
+                            <p>Backend Developer</p>
+                            <p>July 2024 - September 2024 (3 months)</p>
+                            <p>Rawabi, PA</p>
+                        </div>
                     </div>
                     <div class="details_container">
                         <img src="./assets/education.png" alt="education icon" class="Icon">
