--- a/index.html
+++ b/index.html
@@ -84,82 +84,103 @@
         </div>
         <img src="assets/arrow.png" alt="arrow icon" class="Icon arrow" onclick="location.href='#experience'">
     </section>
-    <section id="experience">
-        <p class="section_text_p1">Explore my</p>
-        <h1 class="title">Experience</h1>
+   <section id="experience">
+    <p class="section_text_p1">Explore my</p>
+    <h1 class="title">Experience</h1>
         <div class="experience-details-container">
             <div class="about_container">
                 <div class="details_container">
-                    <h2 class="experience-sub-title">front end development</h2>
-                    <div class="article-container">
-                        <article>
-                            <img src="./assets/checkmark.png" alt="experience icon" class="Icon">
-                            <div>
-                                <h3>HTML</h3>
-                                <p>Begginer</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img src="./assets/checkmark.png" alt="experience icon" class="Icon">
-                            <div>
-                                <h3>css</h3>
-                                <p>Begginer</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img src="./assets/checkmark.png" alt="experience icon" class="Icon">
-                            <div>
-                                <h3>Java-fx</h3>
-                                <p>Begginer</p>
-                            </div>
-                        </article>
-                    </div>
+                    <h2 class="experience-sub-title">Front End Development</h2>
+                        <div class="article-container">
+                            <article>
+                                <img src="./assets/checkmark.png" alt="experience icon" class="Icon">
+                                <div>
+                                    <h3>HTML</h3>
+                                    <p>Beginner</p>
+                                </div>
+                            </article>
+                            <article>
+                                <img src="./assets/checkmark.png" alt="experience icon" class="Icon">
+                                <div>
+                                <h3>CSS</h3>
+                                <p>Beginner</p>
+                                </div>
+                            </article>
+                            <article>
+                                <img src="./assets/checkmark.png" alt="experience icon" class="Icon">
+                                <div>
+                                <h3>Java-FX</h3>
+                                <p>Beginner</p>
+                                </div>
+                            </article>
                 </div>
-                <div class="details_container">
-                    <h2 class="experience-sub-title">Back end development</h2>
-                    <div class="article-container">
-                        <article>
-                            <img src="./assets/checkmark.png" alt="experience icon" class="Icon">
-                            <div>
-                                <h3>Java</h3>
-                                <p>Intermediate</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img src="./assets/checkmark.png" alt="experience icon" class="Icon">
-                            <div>
-                                <h3>SpringBoot</h3>
-                                <p>Basic</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img src="./assets/checkmark.png" alt="experience icon" class="Icon">
-                            <div>
-                                <h3>PHP</h3>
-                                <p>Basic</p>
-                            </div>
-                        </article>
-                    </div>
-                    <div class="article-container">
-                        <article>
-                            <img src="./assets/checkmark.png" alt="experience icon" class="Icon">
-                            <div>
-                                <h3>MySql</h3>
-                                <p>Basic</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img src="./assets/checkmark.png" alt="experience icon" class="Icon">
-                            <div>
-                                <h3>Git</h3>
-                                <p>Basic</p>
-                            </div>
-                        </article>
-                    </div>
+            </div>
+            <div class="details_container">
+                <h2 class="experience-sub-title">Back End Development</h2>
+                <div class="article-container">
+                    <article>
+                        <img src="./assets/checkmark.png" alt="experience icon" class="Icon">
+                        <div>
+                            <h3>Java Spring Boot Framework</h3>
+                            <p>Intermediate</p>
+                        </div>
+                    </article>
+                    <article>
+                        <img src="./assets/checkmark.png" alt="experience icon" class="Icon">
+                        <div>
+                            <h3>SpringBoot</h3>
+                            <p>Basic</p>
+                        </div>
+                    </article>
+                    <article>
+                        <img src="./assets/checkmark.png" alt="experience icon" class="Icon">
+                        <div>
+                            <h3>PHP</h3>
+                            <p>Basic</p>
+                        </div>
+                    </article>
+                </div>
+                <div class="article-container">
+                    <article>
+                        <img src="./assets/checkmark.png" alt="experience icon" class="Icon">
+                        <div>
+                            <h3>MySQL</h3>
+                            <p>Basic</p>
+                        </div>
+                    </article>
+                    <article>
+                        <img src="./assets/checkmark.png" alt="experience icon" class="Icon">
+                        <div>
+                            <h3>MongoDB</h3>
+                            <p>Basic</p>
+                        </div>
+                    </article>
+                    <article>
+                        <img src="./assets/checkmark.png" alt="experience icon" class="Icon">
+                        <div>
+                            <h3>Git</h3>
+                            <p>Basic</p>
+                        </div>
+                    </article>
+                    <article>
+                        <img src="./assets/checkmark.png" alt="experience icon" class="Icon">
+                        <div>
+                            <h3>ASP.NET Core</h3>
+                            <p>Basic</p>
+                        </div>
+                    </article>
+                    <article>
+                        <img src="./assets/checkmark.png" alt="experience icon" class="Icon">
+                        <div>
+                            <h3>Microservices Architecture</h3>
+                            <p>Basic</p>
+                        </div>
+                    </article>
                 </div>
             </div>
         </div>
-        <img src="assets/arrow.png" alt="arrow icon" class="Icon arrow" onclick="location.href='#Projects'">
+    </div>
+    <img src="assets/arrow.png" alt="arrow icon" class="Icon arrow" onclick="location.href='#Projects'">
     </section>
     <section id="Projects">
         <p class="section_text_p1">Browse My Recent</p>
