--- a/index.html
+++ b/index.html
@@ -128,13 +128,6 @@
                     <article>
                         <img src="./assets/checkmark.png" alt="experience icon" class="Icon">
                         <div>
-                            <h3>SpringBoot</h3>
-                            <p>Basic</p>
-                        </div>
-                    </article>
-                    <article>
-                        <img src="./assets/checkmark.png" alt="experience icon" class="Icon">
-                        <div>
                             <h3>PHP</h3>
                             <p>Basic</p>
                         </div>
@@ -152,28 +145,28 @@
                         <img src="./assets/checkmark.png" alt="experience icon" class="Icon">
                         <div>
                             <h3>MongoDB</h3>
-                            <p>Basic</p>
+                            <p>Intermediate</p>
                         </div>
                     </article>
                     <article>
                         <img src="./assets/checkmark.png" alt="experience icon" class="Icon">
                         <div>
                             <h3>Git</h3>
-                            <p>Basic</p>
+                            <p>Intermediate</p>
                         </div>
                     </article>
                     <article>
                         <img src="./assets/checkmark.png" alt="experience icon" class="Icon">
                         <div>
                             <h3>ASP.NET Core</h3>
-                            <p>Basic</p>
+                            <p>Intermediate</p>
                         </div>
                     </article>
                     <article>
                         <img src="./assets/checkmark.png" alt="experience icon" class="Icon">
                         <div>
                             <h3>Microservices Architecture</h3>
-                            <p>Basic</p>
+                            <p>Intermediate</p>
                         </div>
                     </article>
                 </div>
